--- a/src/app/pages/adventure/checklist/make/make.html
+++ b/src/app/pages/adventure/checklist/make/make.html
@@ -4,7 +4,7 @@
   @if (question() >= 1) {
   <div class="flex flex-col gap-2 max-w-2xl mx-auto px-4 py-6 w-full">
     <p class="text-base text-justify">
-      Test Schrijf nu zelf een programma met de naam Checklist dat een string-array van 3 elementen (index 1 t.e.m. 3)
+      Schrijf nu zelf een programma met de naam Checklist dat een string-array van 3 elementen (index 1 t.e.m. 3)
       aanmaakt en de nodige hulpvariabelen declareert. Het programma vraagt 3 keer via een InputBox welk kampeeritem je
       wil toevoegen, waarbij het nummer van het item in de vraag vermeld wordt (bv. “Geef item 1 in:”). Elke ingegeven
       tekst wordt in een For-lus opgeslagen in de array. Binnen dezelfde lus bouw je één tekst op in het formaat:
