feedback implementatie collega

--- a/src/app/pages/adventure/sport/predict/predict.html
+++ b/src/app/pages/adventure/sport/predict/predict.html
@@ -28,7 +28,7 @@ End Sub
   @if (question() >= 1) {
   <div cdkDropListGroup class="flex flex-col gap-2 max-w-2xl mx-auto px-4 py-6 w-full">
     <!-- TODO: Better text base on solution -->
-    <p class="text-base">Sleep de elementen naar de juiste locatie als de gebruiker eerst fietsen wilt onderzoeken met een verbruik van 6 kcal/min. Vervolgens wil gaan lopen voor 10 kcal/min, en wilt eindigen met een zwempartij van 14 kcal/min.  </p>
+    <p class="text-base">Sleep de elementen naar de juiste locatie als de gebruiker eerst fietsen wilt onderzoeken met een verbruik van 6 kcal/min. Vervolgens wil gaan zwemmen voor 14 kcal/min, en wilt eindigen met een looppartij van 10 kcal/min.  </p>
     <div
       cdkDropList
       class="flex min-h-11 mb-4"
